assn8/src/test/resources/examples/type-err/120-begin-local-var.calc
var x = 8;
begin
  var y = 3.1;
  print y;
end;
print x;
print y;  # error, out of scope here

